# copilot-taller-01

./: DESIGN.md  README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
